--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "collabration-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "serve": "node server.js"
   },
   "keywords": [],
   "author": "Ajeet Pratap Singh",
@@ -20,7 +21,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.3",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
